--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.0</version> <!-- or the latest version -->
+		</dependency>
+
 
 	</dependencies>
 
