--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>dev.marvin</groupId>
 	<artifactId>sportstore-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sportstore-api</name>
+	<name>ecommerce-api</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
