--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,12 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.15.0</version> <!-- or the latest version -->
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 
 	</dependencies>
 
