--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/pro_angular
+    url: jdbc:mysql://localhost:3306/ecommerce
     username: root
     password: pass@123
     driver-class-name: com.mysql.cj.jdbc.Driver
