--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 8088
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ecommerce
